Fixed text alignment for qr customer and bol number content so it appears on printed label better.

--- a/services/flask/website/static/styles.css
+++ b/services/flask/website/static/styles.css
@@ -517,7 +517,7 @@ form, input, label, p {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 150px;
+    height: auto;
     width: 1400px;
     max-width: 100%;
     max-height: 100%;
@@ -526,10 +526,10 @@ form, input, label, p {
     border-top: 0;
     margin: 0 auto;
     margin-bottom: 20px;
-    text-align: center;
+    text-align: justify-all;
     padding-top: 0.5%;
     text-decoration-color: #ffffff;
-    padding-left: 200px;
+    padding-left: 100px;
     overflow-x: auto;
 }
 
@@ -544,7 +544,7 @@ form, input, label, p {
 /*}*/
 
 .print-button {
-    margin-left: 20px; /* Adjust the value to increase or decrease the space between the QR codes and the Print button */
+    margin-left: 40px; /* Adjust the value to increase or decrease the space between the QR codes and the Print button */
 }
 
 
